增加其他几个接口
